--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ai_xiaozhi
+name: xintong_ai
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -45,8 +45,9 @@ dependencies:
   web_socket_channel: ^2.4.0
   intl: ^0.19.0
   image_picker: ^1.0.7
+  image_cropper: ^9.1.0
   fl_chart: ^0.66.2
-  
+  flutter_cache_manager: ^3.4.1
   
   # 音频处理相关库
   opus_flutter: ^3.0.3
@@ -64,7 +65,9 @@ dependencies:
   flutter_slidable: ^4.0.0
   flutter_blue_plus: ^1.35.3
   audio_streamer: ^4.1.1
-  
+  go_router: ^16.0.0
+  intelligence: ^0.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -109,9 +112,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
